# mastering-cpp

./: .gitignore  .gitmodules  LICENSE  README.md
CMake/10_Unit_Test/: CMakeLists.txt
CMake/10_Unit_Test/configured/: config.hpp.in
CMake/10_Unit_Test/docs/html/: dir_08ebf401352d0c333d3a643fc2ed36cf.html  globals.html  globals_func.html  my__lib_2CMakeLists_8txt.html  my__lib_8cc.html  my__lib_8cc__incl.md5  my__lib_8h.html  my__lib_8h__dep__incl.md5  my__lib_8h_source.html
CMake/10_Unit_Test/docs/html/search/: all_3.js  functions_1.js
CMake/10_Unit_Test/src/my_lib/: my_lib.cc
CMake/10_Unit_Test/tests/: CMakeLists.txt  main.cc
CMake/1_Hello_World/: CMakeLists.txt
CMake/4_Variables_Options/: CMakeLists.txt
CMake/4_Variables_Options/app/: main.cc
CMake/5_Configure_File/: CMakeLists.txt
CMake/5_Configure_File/configured/: CMakeLists.txt
CMake/5_Configure_File/src/my_lib/: my_lib.cc
CMake/7_External_Libraries_Git/app/: CMakeLists.txt  main.cc
CMake/7_External_Libraries_Git/src/my_lib/: CMakeLists.txt  my_lib.h
CMake/8_Fetch_Content/: Makefile
CMake/9_Doxygen/: CMakeLists.txt
_configs/VS_Code_Template_Project/: main.cpp
build_system/CMake/007_External_Libraries_Git/: CMakeLists.txt
build_system/CMake/x05_Configure_File/src/my_lib/: CMakeLists.txt
cmake_build_system/x10_Unit_Test_Catch2/src/my_lib/: CMakeLists.txt
cmake_tests_tools/12_Final_CppProjectTemplate/: CMakeLists.txt
cmake_tests_tools/13_google_test/: CMakeLists.txt  LibraryCode.cpp  LibraryCode.hpp  main.cpp  test.cpp
cmake_tests_tools/13_google_test/Section_2_Setting_Up_Google_Test/: CMakeLists.txt  LibraryCode.hpp
cmake_tests_tools/13_google_test/Section_3_Unit_Testing_Basics/: LibraryCode.cpp  LibraryCode.hpp
cmake_tests_tools/13_google_test/Section_4/: CMakeLists.txt
cmake_tests_tools/13_google_test/Section_4_Fixtures/: test.cpp
cmake_tests_tools/13_google_test/Section_4_Google_Test_Fixtures/: CMakeLists.txt
cmake_tests_tools/13_google_test/Section_4_Google_Test_Parameterized_Tests/: LibraryCode.cpp  test.cpp
cmake_tests_tools/13_google_test/Section_5/: CMakeLists.txt
cmake_tests_tools/13_google_test/Section_5_Setting_Up_Google_Mock/: CMakeLists.txt  LibraryCode.cpp  main.cpp  test.cpp
cmake_tests_tools/13_google_test/Section_6/: CMakeLists.txt  Employee.hpp  IDatabaseConnection.hpp  test.cpp
cmake_tests_tools/13_google_test/Section_6_Google_Mock/: EmployeeManager.hpp  IDatabaseConnection.cpp  IDatabaseConnection.hpp
cmake_tests_tools/13_google_test/Section_6_Google_Mock_Assertions_On_Vectors/: CMakeLists.txt  LibraryCode.hpp
cmake_tests_tools/13_google_test/Section_6_Google_Mock_Callbacks/: IDatabaseConnection.hpp  test.cpp
cmake_tests_tools/13_google_test/Section_6_Google_Mock_Matchers/: CMakeLists.txt  IDatabaseConnection.cpp  IDatabaseConnection.hpp  main.cpp
cmake_tests_tools/13_google_test/Section_6_Google_Mock_Mocking_Methods/: EmployeeManager.cpp  IDatabaseConnection.hpp  test.cpp
cmake_tests_tools/13_google_test/Section_6_Google_Mocking_Private_&_Static_Methods/: CMakeLists.txt  IDatabaseConnection.cpp  LibraryCode.cpp  test.cpp
cmake_tests_tools/13_google_test/Section_7_Bonus_Tips&Tricks/: CMakeLists.txt  LibraryCode.cpp  test.cpp
cmake_tests_tools/3_Intermediate_Project/: CMakeLists.txt
cmake_tests_tools/6_Source_and_Headers/: Makefile
cmake_tests_tools/x02_Basic_Project/: CMakeLists.txt
configs/VS_Code_MSVC_Config/: main.cpp
design_patterns/: README.md  template.h  tests.cpp
design_patterns/solid_design_principles/: 003_liskov_substitution_principle.cpp  004_interface_segregation_principle.cpp  x01_single_responsability_principle.cpp  x02_open_closed_principle.cpp  x03_liskov_substitution_principle.cpp  x05_dependency_inversion_principle.cpp
dev_ops/Jenkins/: Jenkinsfile
fundamentals/: main.cpp  template.h
fundamentals/STL_algorithms/: x01_all_any_none_of.cpp  x02_for_each.cpp  x03_max_min_element.cpp  x04_find.cpp  x05_copy.cpp  x06_sort.cpp  x07_transform.cpp
fundamentals/STL_containers/: x01_std_vector.cpp  x02_std_array.cpp  x03_std_deque.cpp
fundamentals/STL_iterators/: x01_iterators.cpp  x02_traversing_container_subsets_with_iterators.cpp  x03_reverse_iterators.cpp  x04_constant_iterators.cpp  x05_std_begin_end.cpp
fundamentals/_first_steps/: x02_errors_warnings.cpp  x03_statements_and_functions.cpp
fundamentals/arguments_to_main/: arguments_to_main_function.cpp  calculator_v1.cpp  calculator_v2.cpp
fundamentals/arrays/: multi_dimensional_arrays_of_characters.h  size_of_an_array.h
fundamentals/box_container/: x01_constructing_destructing.cpp  x02_adding_items.cpp  x03_removing_items.cpp  x04_other_operators.cpp  x05_storing_in_diff_types.cpp
fundamentals/character_manipulation_strings/: acessing_characters_in_string.cpp  character_manipulation.cpp  comparing_strings.cpp  concatenating_strings.cpp  copied_strings.cpp  cstring_manipulation.cpp  ctring_concatenation_copy.cpp  declaring_using_string.cpp  escape_sequences.cpp  modify_strings.cpp  raw_string_literals.cpp  search_string.cpp  string_compare.cpp  string_replace_copy_res_swap.cpp  string_size_capacity.cpp  string_view.cpp  transform_to_number.cpp
fundamentals/class_template/: x01_class_template_declaration.cpp  x02_non_type_template_params.cpp  x03_default_values_for_template_params.cpp  x04_template_specialization.cpp
fundamentals/classes/: destructor.h  size_of_class_objects.h  struct.h  this_pointer.h  x03_default_constructor.cpp  x04_destructor.cpp  x05_destructor_constructor_call_order.cpp  x06_setters_and_getters.cpp  x07_arrow_pointer_call_notation.cpp  x08_this_pointer.cpp  x09_const_member_objects.cpp  x09_getters_as_setters.cpp  x10_class_across_files.cpp  x10_getters_as_setters.cpp  x11_struct.cpp  x12_size_of_class_objects.cpp  x13_dangling_references_pointers.cpp  x16_friend_functions.cpp
fundamentals/classes_and_objects/: const_objects.cpp  dangling_references_pointers.cpp  dog.cpp  mutable_objects.cpp  structured_bindings.cpp
fundamentals/concepts/: using_concepts.cpp
libraries/: README.md
source/: main.cpp  template.h
(+664 files in other folders)
